
Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2021  Stephane Fillod, and others
Copyright (C) 2000-2021  Michael Black W9MDB, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net


Version 5.x -- future
        * rig_get_conf deprecated and replaced by rig_get_conf2
        * rot_get_conf deprecated and replaced by rot_get_conf2

Version 4.5
        * 2022-03-XX
        * Add password capability to rigctld via -A switch. rigctl uses \password, hamlib uses rig_set_password
        * Asynchronous rig data output handling to support transceive and spectrum data. Mikael, OH3BHX
        * See new set_conf option async for some Icom rigs
        * Multicast UDP packet output for asynchronous data. Mikael, OH3BHX
        * Rig state poll routine to serve commonly used data like frequency and mode from cache. Mikael, OH3BHX
        * deprecated hamlib_port_t at front of rig_state structure -- new one at end of structure
        * New RIG_LEVEL_BAND_SELECT for Yaesu rigs
        * 202?-??-??
        * New rig_get_conf2 to replace rig_get_conf buffer overflow potential
        * New rot_get_conf2 to reaplce rot_get_conf buffer overflow potential
        * Added Barrett 4050 -- not functional yet
        * Added TCI 1.X -- not functional yet
        * Added TM-V71(A)
        * Added IC-F8101
        * Added JRC JST-145 and JST-245
        * Added Xiegu X108G, G90, and X6100
        * Added CODAN Envoy and NGS
        * Added Lab599 TX-500
        * Added GOMSPACE GS100
        * Deprecated: rigctl commands \set_trn (A) and \get_trn (a) as they never worked as intended
        * Deprecated: field rig_caps.transceive and RIG_TRN_* macros

Version 4.4
        * 2021-12-02
        * Icom rigs now default filter 2 when setting PKTUSB but user can override 
        * Fix FTDX9000 meter readings
        * Add Android sensor as a rotator
        * Added rig_get_vfo to some Icom rigs that have XCHG or 0x25 command capability